garde/tests/rules/snapshots/rules__rules__if_conditional__conditional_additional_inner_rules_are_combined.snap
---
source: garde/tests/./rules/if_conditional.rs
expression: snapshot
---
ConditionalAdditionalInner {
    strict: true,
    items: [
        "é",
    ],
}
items[0]: not ascii
items[0]: length is lower than 3
