garde/tests/rules/snapshots/rules__rules__if_conditional__conditional_additional_inner_skips_extra_rules_when_false.snap
---
source: garde/tests/./rules/if_conditional.rs
expression: snapshot
---
ConditionalAdditionalInner {
    strict: false,
    items: [
        "é",
    ],
}
items[0]: not ascii
