garde/tests/rules/snapshots/rules__rules__if_conditional__conditional_custom_inner_receives_context.snap
---
source: garde/tests/./rules/if_conditional.rs
expression: snapshot
---
ConditionalCustomInner {
    items: [
        "other",
    ],
}
items[0]: not equal to needle
