garde/tests/rules/snapshots/rules__rules__if_conditional__conditional_inner_validates_items_when_true.snap
---
source: garde/tests/./rules/if_conditional.rs
expression: snapshot
---
ConditionalInner {
    validate_items: true,
    items: [
        "okay",
        "é",
    ],
}
items[1]: not ascii
items[1]: length is lower than 3
