garde/tests/rules/snapshots/rules__rules__if_conditional__conditional_required_inner_validates_options_when_true.snap
---
source: garde/tests/./rules/if_conditional.rs
expression: snapshot
---
ConditionalRequiredInner {
    require_items: true,
    conditional_inner: [
        None,
    ],
    inner_conditional: [
        None,
    ],
}
conditional_inner[0]: not set
inner_conditional[0]: not set
