garde/tests/rules/snapshots/rules__rules__if_conditional__contextual_nested_conditional_uses_context_and_struct_level_rules.snap
---
source: garde/tests/./rules/if_conditional.rs
expression: snapshot
---
ContextualNestedConditional {
    items: [
        "é",
    ],
    expected_first: "expected",
}
first item does not match expected value
items[0]: length is lower than 3
items[0]: not ascii
