garde/tests/rules/snapshots/rules__rules__if_conditional__dive_can_be_combined_with_conditional_sibling_rules.snap
---
source: garde/tests/./rules/if_conditional.rs
expression: snapshot
---
DiveWithConditionalSiblingRule {
    strict: true,
    child: DiveChild {
        value: "x",
    },
}
child.value: length is lower than 3
child: conditional child rule failed
