garde/tests/rules/snapshots/rules__rules__if_conditional__inner_conditional_validates_items_when_true.snap
---
source: garde/tests/./rules/if_conditional.rs
expression: snapshot
---
InnerConditional {
    check_ascii: true,
    check_length: true,
    items: [
        "é",
    ],
}
items[0]: not ascii
items[0]: length is lower than 3
