garde/tests/rules/snapshots/rules__rules__if_conditional__multiple_conditions_unconditional_fail.snap
---
source: garde/tests/./rules/if_conditional.rs
expression: snapshot
---
MultipleConditions {
    check_format: false,
    check_length: false,
    value: None,
}
value: not set
