garde/tests/rules/snapshots/rules__rules__if_conditional__nested_conditional_inner_requires_both_conditions.snap
---
source: garde/tests/./rules/if_conditional.rs
expression: snapshot
---
NestedConditionalInner {
    validate_items: true,
    check_ascii: true,
    items: [
        "é",
    ],
}
items[0]: not ascii
