garde/tests/rules/snapshots/rules__rules__if_conditional__simple_conditional_invalid_when_true.snap
---
source: garde/tests/./rules/if_conditional.rs
expression: snapshot
---
SimpleConditional {
    validate_username: true,
    username: "テスト",
}
username: not ascii
